welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:46: error: Unmatched closing brace '}' ignored here
	}
        ^